# ini_fuzzer

./: .gitignore  CMakeLists.txt  README.md
src/: fuzzing.cpp  parser.cpp  parser.h
test/corpus/: sample1.ini  sample2.ini  sample3.ini
